src/text/snapshots/similar__text__udiff__unified_diff_newline_hint-2.snap
---
source: src/text/udiff.rs
expression: "&diff.unified_diff().missing_newline_hint(false).header(\"a.txt\",\n                                                        \"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -0 +0 @@
-a
+b

